# yaml-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.zig  build.zig.zon  meson.build
.github/workflows/: build.yml
VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
VS/util/: INSTALL.vcxproj  INSTALL.vcxproj.filters  yaml-cpp-parse.vcxproj  yaml-cpp-parse.vcxproj.filters  yaml-cpp-read.vcxproj  yaml-cpp-read.vcxproj.filters  yaml-cpp-sandbox.vcxproj  yaml-cpp-sandbox.vcxproj.filters
include/yaml-cpp/: dll.h  emitter.h  exceptions.h
include/yaml-cpp/node/: convert.h  impl.h  node.h
include/yaml-cpp/node/detail/: node_data.h
src/: emitter.cpp  emitterutils.cpp  emitterutils.h  exceptions.cpp  node_data.cpp
test/: CMakeLists.txt  main.cpp
test/VS/: yaml-cpp-tests.vcxproj  yaml-cpp-tests.vcxproj.filters
test/VS/prefix/googlemock/: gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
test/VS/prefix/googletest/: gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
test/integration/: emitter_test.cpp  encoding_test.cpp  gen_emitter_test.cpp  handler_spec_test.cpp  handler_test.cpp  load_node_test.cpp  node_spec_test.cpp
util/: api.cpp  parse_util.cpp  read.cpp  sandbox.cpp
vsproj/: yaml-cpp.sln  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
vsproj/x64/Debug/: yaml-cpp.exp  yaml-cpp.lib
vsproj/yaml-cpp.dir/Debug/x64/: vc120.idb
(+8 files in other folders)
